# Copyright (C) 1994-2022 OpenTV, Inc. and Nagravision S.A.
# Copyright (C) Kudo Chien.
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree.

component("input") {
  public = [
    "export.h",
    "InputEventDelegate.h",
    "MouseWheelEvent.h",
  ]

  defines = [ "INPUT_IMPLEMENTATION" ]
}
