component("double-conversion") {
  sources = [
    "src/bignum.cc",
    "src/bignum-dtoa.cc",
    "src/cached-powers.cc",
    "src/diy-fp.cc",
    "src/double-conversion.cc",
    "src/fast-dtoa.cc",
    "src/fixed-dtoa.cc",
    "src/strtod.cc",
  ]

  public_configs = [ ":double-conversion-config" ]
}

config("double-conversion-config") {
  include_dirs = [
    ".",
  ]
}
